# large-scale-graph-algorithms

./: .gitignore  01-introduction.tex  10-bipartite-matching.tex  20-compression.tex  30-coloring.tex  40-randomized.tex  LICENSE  Makefile  README.md  README.org  Snakefile  header.tex
.github/workflows/: compile-slides.yml
data/: README.md  cut4.sh  datasets.csv  dimacs9totsv.sh  ren.sh
docs/: index.html  index.md
img/: articulation-points.pdf_tex  bridges.pdf_tex
results/: RoadNet-CA-bfsrs.txt  RoadNet-CA-dfsrs.txt  USA-road-t.NY-shortestnx.txt  USA-road-t.NY-st_shortest_path.txt  USA-road-t.NY-st_shortest_path_bidirectional.txt  USA-road-t.NY-st_shortest_path_petgraph.txt  amazon0302-bfsrs.txt  amazon0302-dfsrs.txt  rome99-shortestnx.txt  rome99-st_shortest_path.txt  rome99-st_shortest_path_bidirectional.txt  rome99-st_shortest_path_petgraph.txt
slides/: 01-introduction.tex  02-2vertex.tex  03-2edge_scc.tex  10-bipartite-matching.tex  10-flow-ford.tex  11-karp-dinitz.tex  20-compression.tex  30-coloring.tex  40-randomized.tex  header-insegnamento.hdr  header.hdr  header.tex  license.hdr
slides/common/: header.tex
slides/img/: bridges.pdf_tex
src/: Cargo.toml  coloring-dsatur-heap-faster.py  coloring-dsatur-heap-faster.txt  coloring-dsatur-heap.py  coloring-dsatur-heap.txt  coloring-dsatur.py  coloring-dsatur.txt  coloring-greedy.py  coloring-greedy.txt  coloring-rlf-maximum.txt  coloring-rlf.py  coloring-welsh-powell.py  coloring-welsh-powell.txt  shortest-path.py
src/src/: lib.rs
